2011-03-29  Karl Berry  <karl@tug.org>

	* configure.ac: only install the freebsd binary if the current
	freebsd system is new enough.  From Nikola Lecic,
	http://tug.org/pipermail/tlbuild/2011q1/001826.html.

2011-03-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Correctly distinguish `biber' and `biber.exe' on
	Cygwin.  Problem reported by Ken Brown <kbrow1i@gmail.com>.

2011-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac: new directory, required for the TeX Live build system.
	* Makefile.am, configure.ac: Drop TL_HAVE_BIBER_BINARY.
	* configure.ac, m4/kpse-tl-platform.m4, TeXLive/*.pm:
	New strategy to determine TeX Live platform names.

2011-03-16  Karl Berry  <karl@tug.org>

	* configure.ac (BIBER_EXE): AC_SUBST this, after detecting it.
	Call AC_CANONICAL_HOST and AC_EXEEXT to prepare for
	cross-compilation, maybe.
	* Makefile.am (bin_SCRIPTS): simplify to defining this
	as $(BIBER_EXE), which requires also defining this:
	(EXTRA_SCRIPTS): as empty, in our case.
	(EXTRA_DIST): TeXLive bin.
	* bin: new directory for binaries.

2011-03-11  Karl Berry  <karl@tug.org>

	* directory created.


Copyright 2011 Karl Berry.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.