@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory utils/xindy/
 ##
-## Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -46,6 +46,8 @@ all-local: config.force
 config.force:
 	echo timestamp >config.force
 	$(SHELL) ./config.status --recheck
+
+DISTCLEANFILES = config.force
 
 perl_scripts = texindy xindy
 scriptsdir = texmf/scripts/xindy
